Wrong full stops 🙈

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -35,22 +35,22 @@
 <body>
 	<header>
 		<p>
-			բարև ես <span class="accent">հայկ</span>ն եմ (<span class="accent">Hayk</span>)<br>
+			բարև ես <span class="accent">հայկ</span>ն եմ (<span class="accent">Hayk</span>):<br>
 		</p>
 
 		<p>
 			ես բաներ եմ ստեղծում <br>
-			և բաներ եմ սովորում.<br>
+			և բաներ եմ սովորում:<br>
 		</p>
 
 		<p>
 			սովորաբար բաներ եմ ստեղծում<br>
-			որ սովորեմ, թե ոնց բաներ ստեղծեմ. <br>
+			որ սովորեմ, թե ոնց բաներ ստեղծեմ:<br>
 		</p>
 
 		<p>
 			փորձում եմ փրկել աշխարը<br>
-			(կամ մահանալ պորձելիս).<br>
+			(կամ մահանալ պորձելիս):<br>
 		</p>
 
 		<p id="smile">
@@ -151,7 +151,7 @@
 
 			</ul>
 
-			<br>Եթե ցանկանում եք, կարող եք նաև դիտել իմ <a href="http://hayk.earth/resume">ռեզյումեն</a>.
+			<br>Եթե ցանկանում եք, կարող եք նաև դիտել իմ <a href="http://hayk.earth/resume">ռեզյումեն</a>:
 		</section>
 
 
