--- a/src/html/index.html
+++ b/src/html/index.html
@@ -55,8 +55,8 @@
 
 		<p id="smile">
 			😊
-			<button type="button" onclick="night()" id="moon">🌗</button>
-			<button type="button" onclick="day()" id="sun">☀️</button>
+			<button type="button" id="moon">🌗</button>
+			<button type="button" id="sun">☀️</button>
 		</p>
 
 	</header>
@@ -162,29 +162,7 @@
 					<a href="https://chat.hayk.io" title="">chat.hayk.io</a>
 				</li>
 				<li>
-					<script type="text/javascript" language="javascript">
-						// Email obfuscator script 2.1 by Tim Williams, University of Arizona
-						// Random encryption key feature coded by Andrew Moulden
-						// This code is freeware provided these four comment lines remain intact
-						// A wizard to generate this code is at http://www.jottings.com/obfuscator/
-						{ coded = "Pl@PcsN.ly"
-						  key = "8RxCQZhIB0UGbMApPS5wHuYJiWok9Fa62VljyNXdcteTKEs7Lvz3rqmgf4DOn1"
-						  shift=coded.length
-						  link=""
-						  for (i=0; i<coded.length; i++) {
-							if (key.indexOf(coded.charAt(i))==-1) {
-							  ltr = coded.charAt(i)
-							  link += (ltr)
-							}
-							else {     
-							  ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
-							  link += (key.charAt(ltr))
-							}
-						  }
-						document.write("<a href='mailto:"+link+"?subject=Hi Hayk!'>"+link+"</a>")
-						}
-						</script><noscript>hi [at] hayk.io</noscript>
-						
+					<a href="mailto:hi@hayk.io" title="">hi@hayk.io</a>
 				</li>
 				<li>
 					<a href="https://github.com/haykkh/" title="">github</a>
