--- a/src/html/index.html
+++ b/src/html/index.html
@@ -33,6 +33,9 @@
 
 </head>
 <body>
+	<div id="language">
+		<a href="https://hayk.earth">en</a>
+	</div>
 	<header>
 		<p>
 			բարև ես <span class="accent">հայկ</span>ն եմ (<span class="accent">Hayk</span>):<br>
@@ -52,6 +55,8 @@
 			փորձում եմ փրկել աշխարը<br>
 			(կամ մահանալ պորձելիս):<br>
 		</p>
+
+
 
 		<p id="smile">
 			😊
