if you're looking for hayk

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -38,7 +38,11 @@
 	</div>
 	<header>
 		<p>
-			բարև ես <span class="accent">հայկ</span>ն եմ (<span class="accent">Hayk</span>):<br>
+			բարև ես <span class="accent">Հայկ</span>ն եմ:<br>
+		</p>
+		<p>
+			(if you're looking for <span class="accent">hayk</span>,<br>
+			click <a href="https://hayk.earth">here</a>)
 		</p>
 
 		<p>
